vendor/hdf5-metno-derive-0.10.0/tests/compile-fail/empty-enum.stderr
error: cannot derive `H5Type` for empty enums
 --> tests/compile-fail/empty-enum.rs:6:6
  |
6 | enum Foo {}
  |      ^^^
